# Context_QA

./: .gitignore  README.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: Background.tsx  Navbar.tsx
rag-2/: .gitignore  main.py  pyproject.toml  requirements.txt
rag-2/chat/config/: config.yaml
rag-2/chat/exception/: exception_handler.py
rag-2/chat/logger/: __init__.py
rag-2/chat/model/: models.py
rag-2/chat/prompts/: prompt.py
rag-2/chat/src/document_chat/: retrieval.py
rag-2/chat/src/document_ingestion/: data_ingestion.py
rag-2/chat/utils/: document_ops.py  file_io.py  model_loader.py  session_cleanup.py
